# tb

./: .gitignore  Cargo.toml  LICENSE  README.md  test.c  test.sh
.github/workflows/: rust.yml
src/: ast.rs  ast_builder.rs  backend.rs  main.rs  parser.rs  register.rs
src/builder/: application.rs  expression.rs  function.rs  mod.rs
src/ffi/: analyze.h  mod.rs
src/tool/: defs.rs  mod.rs
tb/: Cargo.toml
tb-builder/: Cargo.toml
tb-builder/src/: application.rs  block.rs  call.rs  condition.rs  expression.rs  function.rs  if_block.rs  if_statement.rs  lib.rs
tb-core/: Cargo.toml
tb-core/src/: addressing_mode.rs  ast.rs  ast_builder.rs  backend.rs  error.rs  instruction.rs  lib.rs  location.rs  parser.rs  store.rs  types.rs
tb-core/src/compiler/: gcc.rs  mod.rs
tb-core/src/syntax/: att_syntax.rs  mod.rs
tb-core/src/tool/: defs.rs  mod.rs
tb-ffi/: Cargo.toml  build.rs
tb-ffi/src/: lib.rs
tb-target-x86-64/: Cargo.toml
tb-target-x86-64/src/: backend.rs  generator.rs  instruction.rs  lib.rs  register.rs  storage.rs
tb-target-x86-64/src/compiler/: block.rs  condition.rs  definition.rs  error.rs  expression.rs  mod.rs  statement.rs  value.rs
tb-target-x86-64/src/types/: definition.rs  expression.rs  mod.rs  statement.rs  value.rs
tb/src/: main.rs
tb/src/tests/: add_test.rs  bitwise_and_test.rs  bitwise_neg_test.rs  bitwise_not_test.rs  bitwise_or_test.rs  bitwise_xor_test.rs  dec_test.rs  div_test.rs  func_call.rs  if_test.rs  inc_test.rs  mod.rs  mod_test.rs  mul_test.rs  return_test.rs  shift_left_test.rs  shift_right_test.rs  sub_test.rs
(+1 files in other folders)
