[package]
name = "tb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
anyhow = "1.0.71"
bitmask-enum = "2.2.4"
num_enum = "0.7.3"
rstest = "0.22.0"
lazy_static = "1.5.0"
os_info = { version = "3", default-features = false }
